--- a/index.html
+++ b/index.html
@@ -53,10 +53,42 @@
         </figcaption>
       </figure>
       <div class="grid grid-cols-2 gap-16">
-        <div><img src="assets/images/Image 02.png" alt=""></div>
-        <div><img src="assets/images/Image 03.png" alt=""></div>
-        <div><img src="assets/images/Image 04.png" alt=""></div>
-        <div><img src="assets/images/Image 05.png" alt=""></div>
+        <figure class="card">
+          <img src="assets/images/Image 02.png" alt="">
+          <figcaption>
+            <span class="content-tag">holograms</span>
+            <h2 class="text-lg">
+              Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!
+            </h2>
+          </figcaption>                 
+        </figure>
+        <figure class="card">
+          <img src="assets/images/Image 03.png" alt="">
+          <figcaption> 
+            <span class="content-tag">internet</span>
+            <h2 class="text-lg">
+              Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.
+            </h2>    
+          </figcaption>   
+        </figure>
+        <figure class="card">
+          <img src="assets/images/Image 04.png" alt="">
+          <figcaption>
+            <span class="content-tag">vestíveis</span>
+            <h2 class="text-lg">
+              Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o bem-estar pessoal.
+            </h2>    
+          </figcaption>  
+        </figure>
+        <figure class="card">
+          <img src="assets/images/Image 05.png" alt="">
+          <figcaption>
+            <span class="content-tag">realidade virtual</span>
+            <h3 class="text-lg">
+              Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradicional.
+            </h3>    
+          </figcaption>  
+        </figure>
       </div>
     </section>
   </main>
