style: aplica estilo mais lidos da semana

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </section>
 
     <section id="weekly">
-      <header class="grid-flow-col">
+      <header class="grid grid-flow-col">
         <h3>Mais lidas da semana</h3>
         <a href="#" class="grid-flow-col"></a>
         <strong>Ver tudo</strong>
