--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </header>
 
   <main class="container grid">
-
+    <!--DESTRAQUES-->
     <section id="featured" class="grid grid-flow-col gap-16">
       <figure class="card">
         <img src="assets/images/Image 01.png" alt="">
@@ -93,6 +93,7 @@
       </div>
     </section>
 
+    <!-- MAIS LIDOS DA SEMANA-->
     <section id="weekly">
       <header class="grid grid-flow-col">
         <h3>Mais lidas da semana</h3>
@@ -103,7 +104,7 @@
 
       <div class="grid gap-16">
         <figure>
-          <span class="content-tag">veículos</span>
+          <span class="content-tag ellipsis">veículos</span>
           <img src="assets/images/Image 06.png" alt="">
           <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.</p>
         </figure>
@@ -115,7 +116,7 @@
         </figure>
 
         <figure>
-          <span class="content-tag">realidade virtual</span>
+          <span class="content-tag ellipsis">realidade virtual</span>
           <img src="assets/images/Image 08.png" alt="">
           <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.</p>
         </figure>
@@ -128,6 +129,174 @@
       </div>
     </section>
 
+    <section id="ai">
+      <header class="grid grid-flow-col">
+        <h3>Destaques da inteligência Artificial</h3>
+        <a href="#" class="grid grid-flow-col">
+          <strong>Ver tudo</strong>
+          <span></span>
+        </a>
+      </header>
+
+      <div class="grid gap-32">
+        <!--NOVO ALGORITMO-->
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <span class="content-tag">Inteligência Artificial</span>
+            <h3 class="text-xl">
+              Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.
+            </h3>
+            <p class="text-sm ellipsis">
+              Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até planejamento estratégico.
+            </p>
+          </div>
+          <div>
+            <img src="assets/images/Image 10.png" alt="">
+          </div>
+        </article>
+
+        <!--DISPOSITIVO PORTÁTIL-->
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <span class="content-tag">Inteligência Artificial</span>
+            <h3 class="text-xl">
+              Dispositivo portátil promete traduzir instantaneamente diferentes idiomas, facilitando a comunicação global.
+            </h3>
+            <p class="text-sm ellipsis">
+              Em um mundo cada vez mais conectado, a comunicação sem fronteiras é essencial. Nesse contexto, um dispositivo portátil surge como um verdadeiro herói linguístico, prometendo quebrar as barreiras idiomáticas instantaneamente. Imagine poder se comunicar fluentemente em qualquer lugar do mundo, independentemente do idioma local. Este dispositivo não é mais uma visão futurista, mas uma realidade impressionante que está transformando a forma como nos conectamos globalmente. Nesta reportagem, mergulharemos nas funcionalidades deste dispositivo revolucionário e como ele está moldando uma nova era de compreensão global.
+            </p>
+          </div>
+          <div>
+            <img src="assets/images/Image 11.png" alt="">
+          </div>
+        </article>
+
+         <!--RÔBOS-->
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <span class="content-tag">Inteligência Artificial</span>
+            <h3 class="text-xl">
+              Criados para auxiliar idosos, robôs de companhia ganham popularidade, oferecendo suporte emocional e físico aos usuários.
+            </h3>
+            <p class="text-sm ellipsis">
+              A tecnologia não só avança, mas também busca tornar a vida mais significativa para todas as gerações. No cenário atual, os robôs sociais, projetados especialmente para oferecer apoio e companhia aos idosos, estão ganhando destaque. Mais do que meros assistentes, esses robôs são programados para fornecer suporte emocional e físico, preenchendo lacunas nas necessidades de cuidado. Nesta matéria, exploraremos como esses companheiros tecnológicos estão impactando positivamente a qualidade de vida da terceira idade e proporcionando uma nova perspectiva sobre o envelhecimento.
+            </p>
+          </div>
+          <div>
+            <img src="assets/images/Image 12.png" alt="">
+          </div>
+        </article>
+
+       <!--PRODUTIVIDADE-->
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <span class="content-tag">Inteligência Artificial</span>
+            <h3 class="text-xl">
+              Aplicativo utiliza inteligência artificial para ajudar usuários a manterem o foco e aumentarem a produtividade no dia a dia.
+            </h3>
+            <p class="text-sm ellipsis">
+              No turbilhão da vida moderna, onde distrações são abundantes, um aplicativo inovador surge como um aliado indispensável para quem busca maior concentração e eficiência no cotidiano. Utilizando avançados algoritmos de inteligência artificial, este aplicativo promete mais do que simplesmente gerenciar tarefas; ele está programado para compreender os padrões de trabalho de cada usuário, oferecendo sugestões personalizadas para otimizar o tempo e maximizar a produtividade. Nesta matéria, exploraremos como essa ferramenta tecnológica está se tornando a chave para manter o foco em um mundo cada vez mais cheio de distrações, transformando a maneira como encaramos nossas responsabilidades diárias.
+            </p>
+          </div>
+          <div>
+            <img src="assets/images/Image 13.png" alt="">
+          </div>
+        </article>
+      </div>
+    </section>
+
+    
+    <div>
+      <div id="ads">
+        <img src="assets/Ads.png" alt="">
+      </div>
+
+      <section id="more">
+        <header class="grid grid-flow-col">
+          <h3>Viu isso aqui?</h3>
+          <a href="#" class="grid grid-flow-col">
+            <strong>Ver tudo</strong>
+            <span></span>
+          </a>
+        </header>
+
+        <div class="grid gap-32">
+          <article class="grid grid-flow-col gap-16">
+
+            <div>
+              <img src="assets/images/Image 14.png" alt="Smartphone com visual diferente">
+            </div>
+
+            <div>
+              <span class="content-tag">software</span>
+              <h3 class="text-xl">
+                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e promovendo a conscientização.
+              </h3>
+            </div>
+
+          </article>
+
+          <article class="grid grid-flow-col gap-16">
+
+            <div>
+              <img src="assets/images/Image 15.png" alt="Garoto com ocúlos VR">
+            </div>
+
+            <div>
+              <span class="content-tag">realidade virtual</span>
+              <h3 class="text-xl">
+                Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial comple...
+              </h3>
+            </div>
+
+          </article>
+
+          <article class="grid grid-flow-col gap-16">
+
+            <div>
+              <img src="assets/images/Image 16.png" alt="Figura de uma criptomoeda com uma folha nascendo dela.">
+            </div>
+
+            <div>
+              <span class="content-tag">cripomoedas</span>
+              <h3 class="text-xl">
+                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o im...
+              </h3>
+            </div>
+
+          </article>
+
+          <article class="grid grid-flow-col gap-16">
+
+            <div>
+              <img src="assets/images/Image 17.png" alt="Um drone carregando uma encomenda">
+            </div>
+
+            <div>
+              <span class="content-tag">drones</span>
+              <h3 class="text-xl">
+                Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o cen...
+            </div>
+
+          </article>
+
+          <article class="grid grid-flow-col gap-16">
+
+            <div>
+              <img src="assets/images/Image 18.png" alt="Pulmão feito em impressora 3D">
+            </div>
+
+            <div>
+              <span class="content-tag">impressão 3d</span>
+              <h3 class="text-xl">
+                Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a lis...
+              </h3>
+            </div>
+
+          </article>
+        </div>
+      </section>
+    </div>
   </main>
 </body>
 </html>
