style: estilização últimas seções
Ajusta e corrige proporçõeses e das seções, além de aplicar estilo final:
- #ai;
- #aside;
- #more;

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
       </div>
     </section>
 
+    <!-- INTELIGENCIA ARTIFICIA -->
     <section id="ai">
       <header class="grid grid-flow-col">
         <h3>Destaques da inteligência Artificial</h3>
@@ -139,7 +140,7 @@
       </header>
 
       <div class="grid gap-32">
-        <!--NOVO ALGORITMO-->
+        <!--CARD Algoritmo-->
         <article class="grid grid-flow-col gap-16">
           <div>
             <span class="content-tag">Inteligência Artificial</span>
@@ -155,7 +156,7 @@
           </div>
         </article>
 
-        <!--DISPOSITIVO PORTÁTIL-->
+        <!--CARD Dispositivo portatil-->
         <article class="grid grid-flow-col gap-16">
           <div>
             <span class="content-tag">Inteligência Artificial</span>
@@ -171,7 +172,7 @@
           </div>
         </article>
 
-         <!--RÔBOS-->
+         <!--CARD Rôbos-->
         <article class="grid grid-flow-col gap-16">
           <div>
             <span class="content-tag">Inteligência Artificial</span>
@@ -187,7 +188,7 @@
           </div>
         </article>
 
-       <!--PRODUTIVIDADE-->
+       <!--CARD Produtividade-->
         <article class="grid grid-flow-col gap-16">
           <div>
             <span class="content-tag">Inteligência Artificial</span>
@@ -206,7 +207,7 @@
     </section>
 
     
-    <div>
+    <aside>
       <div id="ads">
         <img src="assets/Ads.png" alt="">
       </div>
@@ -230,8 +231,8 @@
             <div>
               <span class="content-tag">software</span>
               <h3 class="text-xl">
-                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e promovendo a conscientização.
-              </h3>
+                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológic...
+              </h3>  
             </div>
 
           </article>
@@ -260,7 +261,7 @@
             <div>
               <span class="content-tag">cripomoedas</span>
               <h3 class="text-xl">
-                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o im...
+                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando min...
               </h3>
             </div>
 
@@ -276,6 +277,7 @@
               <span class="content-tag">drones</span>
               <h3 class="text-xl">
                 Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o cen...
+              </h3>
             </div>
 
           </article>
@@ -296,7 +298,7 @@
           </article>
         </div>
       </section>
-    </div>
+    </aside>
   </main>
 </body>
 </html>
